# template-repo

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: lints.yml
notebooks/: debugging.ipynb  example.ipynb  profiling.ipynb
src/utils/: __init__.py  example.py  example_2.py
src/utils/folder_2/: __init__.py  example_2.py
