[tool.poetry]
name = "template-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-isort = "^6.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
